test/tests/stages/6_statements_and_conditional_expressions/invalid_semantics/ternary_assign.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[4]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: a
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 2
                      None: 
                    None: 
                  Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: b
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CConditional: 
                    CBinary: 
                      CGreaterThan: 
                      CVar: 
                        TIdentifier: a
                        None: 
                      CVar: 
                        TIdentifier: b
                        None: 
                      None: 
                    CAssignment: 
                      None: 
                      CVar: 
                        TIdentifier: a
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 1
                        None: 
                      None: 
                    CVar: 
                      TIdentifier: a
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 0
                    None: 
                  None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: a
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
